--- a/src/ThingsGateway.Gateway.Razor/Components/ImportExcel.razor
+++ b/src/ThingsGateway.Gateway.Razor/Components/ImportExcel.razor
@@ -16,7 +16,7 @@
 
             @foreach (var item in _importPreviews)
             {
-                <div class="mt-2 font-weight-black">
+                <div class="mt-2">
                     @(
                         Localizer["UploadCount", item.Key, item.Value.DataCount]
                         )
