--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
@@ -65,7 +65,19 @@
                         <div class="col-12  col-md-6">
                             <Select IsVirtualize @bind-Value="@value.RedundantDeviceId" style="width:100%"
                                     OnQueryAsync="OnRedundantDevicesQuery"
-                                    ShowSearch="true" IsPopover />
+                                    ShowSearch="true" IsPopover>
+                                <DisplayTemplate Context="display">
+                                    @{
+                                        string device = "none";
+                                        if (value.RedundantDeviceId != null)
+                                        {
+                                            if (value.RedundantDeviceId.HasValue)
+                                                DeviceDict.TryGetValue(value.RedundantDeviceId.Value, out device);
+                                        }
+                                        @device
+                                    }
+                                </DisplayTemplate>
+                            </Select>
                         </div>
                     </EditTemplate>
 
@@ -157,7 +169,18 @@ else
                             <div class="col-12  col-md-6">
                                 <Select IsVirtualize @bind-Value="@value.RedundantDeviceId" style="width:100%"
                                         OnQueryAsync="OnRedundantDevicesQuery"
-                                        ShowSearch="true" IsPopover />
+                                        ShowSearch="true" IsPopover>
+                                    <DisplayTemplate Context="display">
+                                        @{
+                                            string device = "none";
+                                            if (value.RedundantDeviceId != null)
+                                            {
+                                                DeviceDict.TryGetValue(value.RedundantDeviceId.Value, out device);
+                                            }
+                                            @device
+                                        }
+                                    </DisplayTemplate>
+                                </Select>
                             </div>
                         </EditTemplate>
 
