--- a/src/ThingsGateway.Gateway.Razor/Pages/Runtime/VariableRuntimePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Runtime/VariableRuntimePage.razor
@@ -31,21 +31,21 @@
             </div>
         </SearchTemplate>
         <TableColumns>
-            <TableColumn @bind-Field="@context.DeviceName" ShowTips Editable Visible />
-            <TableColumn @bind-Field="@context.Name" ShowTips Editable Visible />
-            <TableColumn @bind-Field="@context.Description" ShowTips Editable Visible />
-            <TableColumn Field="@context.ChangeTime" ShowTips FieldExpression=@(()=>context.ChangeTime) Editable Visible />
-            <TableColumn Field="@context.CollectTime" ShowTips FieldExpression=@(()=>context.CollectTime) Editable Visible />
-            <TableColumn Field="@context.IsOnline" FieldExpression=@(()=>context.IsOnline) Editable Visible />
-            <TableColumn Field="@context.LastErrorMessage" ShowTips FieldExpression=@(()=>context.LastErrorMessage) Editable Visible />
+            <TableColumn @bind-Field="@context.DeviceName" ShowTips Filterable Sortable Visible />
+            <TableColumn @bind-Field="@context.Name" ShowTips Filterable Sortable Visible />
+            <TableColumn @bind-Field="@context.Description" ShowTips Filterable Sortable Visible />
+            <TableColumn Field="@context.ChangeTime" ShowTips FieldExpression=@(()=>context.ChangeTime) Filterable Sortable Visible />
+            <TableColumn Field="@context.CollectTime" ShowTips FieldExpression=@(()=>context.CollectTime) Filterable Sortable Visible />
+            <TableColumn Field="@context.IsOnline" FieldExpression=@(()=>context.IsOnline) Filterable Sortable Visible />
+            <TableColumn Field="@context.LastErrorMessage" ShowTips FieldExpression=@(()=>context.LastErrorMessage) Filterable Sortable Visible />
 
-            <TableColumn Field="@context.LastSetValue" FieldExpression=@(()=>context.LastSetValue) Editable Visible ShowTips Formatter=@(JsonFormatter)  />
+            <TableColumn Field="@context.LastSetValue" FieldExpression=@(()=>context.LastSetValue) Filterable Sortable Visible ShowTips Formatter=@(JsonFormatter)  />
 
-            <TableColumn Field="@context.RawValue" FieldExpression=@(()=>context.RawValue) Editable Visible ShowTips Formatter=@(JsonFormatter) />
-            <TableColumn Field="@context.Value" FieldExpression=@(()=>context.Value) Editable Visible ShowTips Formatter=@(JsonFormatter) />
+            <TableColumn Field="@context.RawValue" FieldExpression=@(()=>context.RawValue) Filterable Sortable Visible ShowTips Formatter=@(JsonFormatter) />
+            <TableColumn Field="@context.Value" FieldExpression=@(()=>context.Value) Filterable Sortable Visible ShowTips Formatter=@(JsonFormatter) />
 
 
-            <TableColumn @bind-Field="@context.DataType" Editable Visible />
+            <TableColumn @bind-Field="@context.DataType" Filterable Sortable Visible />
 
             <TableColumn @bind-Field="@context.ProtectType" Visible="false" />
             <TableColumn @bind-Field="@context.IntervalTime" Visible="false" />
@@ -58,39 +58,39 @@
 
             <TableColumn @bind-Field="@context.Index" Visible="false" />
             <TableColumn @bind-Field="@context.Id" Visible="false" DefaultSort=true DefaultSortOrder="SortOrder.Asc"/>
-            @* <TableColumn Field="@context.AlarmEnable" FieldExpression=@(()=>context.AlarmEnable) Editable="false" Visible="false" />
+            @* <TableColumn Field="@context.AlarmEnable" FieldExpression=@(()=>context.AlarmEnable) Filterable Sortable="false" Visible="false" />
 
-            <TableColumn @bind-Field="@context.BoolOpenAlarmEnable" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.BoolOpenRestrainExpressions" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.BoolOpenAlarmText" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.BoolCloseAlarmEnable" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.BoolCloseRestrainExpressions" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.BoolCloseAlarmText" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HAlarmEnable" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HRestrainExpressions" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HAlarmText" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HAlarmCode" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HHAlarmEnable" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HHRestrainExpressions" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HHAlarmText" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.HHAlarmCode" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LAlarmEnable" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LRestrainExpressions" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LAlarmText" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LAlarmCode" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LLAlarmEnable" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LLRestrainExpressions" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LLAlarmText" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.LLAlarmCode" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.CustomAlarmEnable" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.CustomRestrainExpressions" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.CustomAlarmText" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.CustomAlarmCode" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.Remark1" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.Remark2" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.Remark3" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.Remark4" Editable="false" Visible="false" />
-            <TableColumn @bind-Field="@context.Remark5" Editable="false" Visible="false" />  *@
+            <TableColumn @bind-Field="@context.BoolOpenAlarmEnable" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.BoolOpenRestrainExpressions" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.BoolOpenAlarmText" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.BoolCloseAlarmEnable" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.BoolCloseRestrainExpressions" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.BoolCloseAlarmText" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HAlarmEnable" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HRestrainExpressions" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HAlarmText" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HAlarmCode" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HHAlarmEnable" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HHRestrainExpressions" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HHAlarmText" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.HHAlarmCode" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LAlarmEnable" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LRestrainExpressions" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LAlarmText" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LAlarmCode" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LLAlarmEnable" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LLRestrainExpressions" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LLAlarmText" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.LLAlarmCode" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.CustomAlarmEnable" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.CustomRestrainExpressions" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.CustomAlarmText" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.CustomAlarmCode" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.Remark1" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.Remark2" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.Remark3" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.Remark4" Filterable Sortable="false" Visible="false" />
+            <TableColumn @bind-Field="@context.Remark5" Filterable Sortable="false" Visible="false" />  *@
 
         </TableColumns>
         <RowButtonTemplate>
