--- a/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
+++ b/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
@@ -21,6 +21,7 @@
 
             @* 主题切换 *@
             <ThemeToggle />
+            <Button @onclick="ShowAbout" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
 
             @* 版本号 *@
             <div class="px-2 navbar-header-text d-none d-lg-block">@_versionString</div>
