--- a/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
+++ b/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
@@ -35,7 +35,10 @@
                                       TooltipPlacement=Placement.Bottom TooltipText="@Localizer[nameof(FullScreenButton)]" />
 
 
-                    <Button @onclick="ShowAbout" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
+                    @if (WebsiteOption.Value.IsShowAbout)
+                    {
+                        <Button @onclick="ShowAbout" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
+                    }
 
                     @* 版本号 *@
                     <div class="px-2 navbar-header-text d-none d-lg-block">@_versionString</div>
