--- a/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
+++ b/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
@@ -23,7 +23,7 @@
             <ThemeToggle />
             @if (WebsiteOption.Value.IsShowAbout)
             {
-                <Button @onclick="ShowAbout" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
+                <Button @onclick="ShowAbout" class="layout-header-bar d-none d-lg-flex px-2" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
             }
             @* 版本号 *@
             <div class="px-2 navbar-header-text d-none d-lg-block">@_versionString</div>
