--- a/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
+++ b/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
@@ -37,7 +37,7 @@
 
                     @if (WebsiteOption.Value.IsShowAbout)
                     {
-                        <Button @onclick="ShowAbout" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
+                        <Button @onclick="ShowAbout" class="layout-header-bar d-none d-lg-flex px-2" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
                     }
 
                     @* 版本号 *@
