--- a/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
+++ b/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
@@ -23,6 +23,7 @@
                         <EditorItem @bind-Field=context.Password />
                         <EditorItem @bind-Field=context.ConnectTimeout />
                         <EditorItem @bind-Field=context.Station />
+                        <EditorItem @bind-Field=context.DtuId />
                         <EditorItem @bind-Field=context.CheckClearTime />
                         <EditorItem @bind-Field=context.HeartbeatHexString />
                         <EditorItem @bind-Field=context.CacheTimeout />
