--- a/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusMaster.razor
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusMaster.razor
@@ -21,6 +21,7 @@
                         <EditorItem @bind-Field=context.ModbusType />
                         <EditorItem @bind-Field=context.ConnectTimeout />
                         <EditorItem @bind-Field=context.Station />
+                        <EditorItem @bind-Field=context.DtuId />
                         <EditorItem @bind-Field=context.CheckClearTime />
                         <EditorItem @bind-Field=context.HeartbeatHexString />
                         <EditorItem @bind-Field=context.CacheTimeout />
