--- a/src/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
@@ -35,6 +35,14 @@
                 </Tooltip>
 
             }
+
+            @if (Item?.IsCollectDevice == false)
+            {
+                <Tooltip Title="@Localizer["DeleteCache"]" Placement="Placement.Bottom">
+                    <PopConfirmButton OnConfirm=@(()=>DeleteCacheAsync(Item.CurrentDevice)) IsDisabled=@(!AuthorizeButton("删除缓存")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("fa-solid fa-rotate") />
+                </Tooltip>
+            }
+
             <Tooltip Title="@Localizer["GatewayDeviceLog"]" Placement="Placement.Bottom">
 
                 <Button OnClick=@(SetLogEnable) IsDisabled=@(!AuthorizeButton("通道日志")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@(Item.ChannelThread.LogEnable?"fa fa-pause":"fa fa-play") />
