--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariableEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariableEditComponent.razor
@@ -6,77 +6,117 @@
 
 @if (ValidateEnable)
 {
+
     <ValidateForm Model="Model" OnValidSubmit="ValidSubmit">
+        <Tab>
+            <TabItem Text=@Localizer["VariableInformation"]>
+                <EditorForm class="p-2" AutoGenerateAllItem="false" RowType=RowType.Inline ItemsPerRow=2 LabelWidth=250 Model="Model">
+                    <FieldItems>
+                        <EditorItem TValue="string" TModel="Variable">
+                            <EditTemplate Context="value">
+                                <div class="col-12">
+                                    <h6>@Localizer["BasicInformation"]</h6>
+                                </div>
+                            </EditTemplate>
+                        </EditorItem>
+                        <EditorItem @bind-Field="@context.Name" Readonly=BatchEditEnable />
+                        <EditorItem @bind-Field="@context.Description" />
+                        <EditorItem @bind-Field="@context.Unit" />
+                        <EditorItem @bind-Field="@context.ProtectType" />
+                        <EditorItem @bind-Field="@context.Enable" />
+                        <EditorItem @bind-Field="@context.RpcWriteEnable" />
 
-        <EditorForm class="p-2" AutoGenerateAllItem="false" RowType=RowType.Inline ItemsPerRow=2 LabelWidth=250 Model="Model">
-            <FieldItems>
-                <EditorItem TValue="string" TModel="Variable">
-                    <EditTemplate Context="value">
-                        <div class="col-12">
-                            <h6>@Localizer["BasicInformation"]</h6>
-                        </div>
-                    </EditTemplate>
-                </EditorItem>
-                <EditorItem @bind-Field="@context.Name" Readonly=BatchEditEnable />
-                <EditorItem @bind-Field="@context.Description" />
-                <EditorItem @bind-Field="@context.Unit" />
-                <EditorItem @bind-Field="@context.ProtectType" />
-                <EditorItem @bind-Field="@context.Enable" />
-                <EditorItem @bind-Field="@context.RpcWriteEnable" />
+                        <EditorItem TValue="string" TModel="Variable">
+                            <EditTemplate Context="value">
+                                <div class="col-12">
+                                    <h6>@Localizer["Connection"]</h6>
+                                </div>
+                            </EditTemplate>
+                        </EditorItem>
 
-                <EditorItem TValue="string" TModel="Variable">
-                    <EditTemplate Context="value">
-                        <div class="col-12">
-                            <h6>@Localizer["Connection"]</h6>
-                        </div>
-                    </EditTemplate>
-                </EditorItem>
+                        <EditorItem @bind-Field="@context.DeviceId">
+                            <EditTemplate Context="value">
+                                <div class="col-12  col-md-6">
+                                    <Select IsVirtualize @bind-Value="@value.DeviceId" Items="@CollectDevices" ShowSearch="true" OnSelectedItemChanged="OnDeviceSelectedItemChanged" IsPopover />
+                                </div>
+                            </EditTemplate>
+                        </EditorItem>
 
-                <EditorItem @bind-Field="@context.DeviceId">
-                    <EditTemplate Context="value">
-                        <div class="col-12  col-md-6">
-                            <Select IsVirtualize @bind-Value="@value.DeviceId" Items="@CollectDevices" ShowSearch="true" OnSelectedItemChanged="OnDeviceSelectedItemChanged" IsPopover />
-                        </div>
-                    </EditTemplate>
-                </EditorItem>
+                        <EditorItem @bind-Field="@context.DataType" />
 
-                <EditorItem @bind-Field="@context.DataType" />
+                        <EditorItem @bind-Field="@context.IntervalTime" />
 
-                <EditorItem @bind-Field="@context.IntervalTime" />
+                        <EditorItem @bind-Field="@context.OtherMethod">
+                            <EditTemplate Context="value">
+                                <div class="col-12  col-md-6">
+                                    <Select IsVirtualize @bind-Value="@value.OtherMethod" Items="@OtherMethods" ShowSearch="true" IsPopover />
+                                </div>
+                            </EditTemplate>
+                        </EditorItem>
 
-                <EditorItem @bind-Field="@context.OtherMethod">
-                    <EditTemplate Context="value">
-                        <div class="col-12  col-md-6">
-                            <Select IsVirtualize @bind-Value="@value.OtherMethod" Items="@OtherMethods" ShowSearch="true" IsPopover />
-                        </div>
-                    </EditTemplate>
-                </EditorItem>
+                        <EditorItem @bind-Field="@context.RegisterAddress" Rows="1" />
 
-                <EditorItem @bind-Field="@context.RegisterAddress" Rows="1" />
-
-                <EditorItem @bind-Field="@context.ReadExpressions" Rows="1" />
-                <EditorItem @bind-Field="@context.WriteExpressions" Rows="1" />
+                        <EditorItem @bind-Field="@context.ReadExpressions" Rows="1" />
+                        <EditorItem @bind-Field="@context.WriteExpressions" Rows="1" />
 
 
 
-                <EditorItem TValue="string" TModel="Variable">
-                    <EditTemplate Context="value">
-                        <div class="col-12">
-                            <h6>@Localizer["Remark"]</h6>
-                        </div>
-                    </EditTemplate>
-                </EditorItem>
-                <EditorItem @bind-Field="@context.Remark1" />
-                <EditorItem @bind-Field="@context.Remark2" />
-                <EditorItem @bind-Field="@context.Remark3" />
-                <EditorItem @bind-Field="@context.Remark4" />
-                <EditorItem @bind-Field="@context.Remark5" />
-            </FieldItems>
-            <Buttons>
-                <Button ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@DefaultLocalizer["Save"] />
-            </Buttons>
-        </EditorForm>
+                        <EditorItem TValue="string" TModel="Variable">
+                            <EditTemplate Context="value">
+                                <div class="col-12">
+                                    <h6>@Localizer["Remark"]</h6>
+                                </div>
+                            </EditTemplate>
+                        </EditorItem>
+                        <EditorItem @bind-Field="@context.Remark1" />
+                        <EditorItem @bind-Field="@context.Remark2" />
+                        <EditorItem @bind-Field="@context.Remark3" />
+                        <EditorItem @bind-Field="@context.Remark4" />
+                        <EditorItem @bind-Field="@context.Remark5" />
+                    </FieldItems>
+
+                </EditorForm>
+
+            </TabItem>
+            <TabItem Text=@Localizer["AlarmInformation"]>
+                <EditorForm class="p-2" AutoGenerateAllItem="false" RowType=RowType.Inline ItemsPerRow=2 LabelWidth=250 Model="Model">
+                    <FieldItems>
+                        <EditorItem @bind-Field="@context.BoolCloseAlarmText" />
+                        <EditorItem @bind-Field="@context.BoolCloseRestrainExpressions" />
+                        <EditorItem @bind-Field="@context.BoolCloseAlarmEnable" Rows="1" />
+                        <EditorItem @bind-Field="@context.BoolOpenAlarmText" />
+                        <EditorItem @bind-Field="@context.BoolOpenRestrainExpressions" />
+                        <EditorItem @bind-Field="@context.BoolOpenAlarmEnable" Rows="1" />
+                        <EditorItem @bind-Field="@context.HHAlarmText" />
+                        <EditorItem @bind-Field="@context.HHAlarmCode" />
+                        <EditorItem @bind-Field="@context.HHRestrainExpressions" />
+                        <EditorItem @bind-Field="@context.HHAlarmEnable" />
+                        <EditorItem @bind-Field="@context.HAlarmText" />
+                        <EditorItem @bind-Field="@context.HAlarmCode" />
+                        <EditorItem @bind-Field="@context.HRestrainExpressions" />
+                        <EditorItem @bind-Field="@context.HAlarmEnable" />
+                        <EditorItem @bind-Field="@context.LAlarmText" />
+                        <EditorItem @bind-Field="@context.LAlarmCode" />
+                        <EditorItem @bind-Field="@context.LRestrainExpressions" />
+                        <EditorItem @bind-Field="@context.LAlarmEnable" />
+                        <EditorItem @bind-Field="@context.LLAlarmText" />
+                        <EditorItem @bind-Field="@context.LLAlarmCode" />
+                        <EditorItem @bind-Field="@context.LLRestrainExpressions" />
+                        <EditorItem @bind-Field="@context.LLAlarmEnable" />
+                        <EditorItem @bind-Field="@context.CustomAlarmText" />
+                        <EditorItem @bind-Field="@context.CustomAlarmCode" />
+                        <EditorItem @bind-Field="@context.CustomRestrainExpressions" />
+                        <EditorItem @bind-Field="@context.CustomAlarmEnable" />
+                    </FieldItems>
+                </EditorForm>
+            </TabItem>
+        </Tab>
+        <div class="form-footer">
+
+            <Button class="mt-2" ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@DefaultLocalizer["Save"] />
+        </div>
     </ValidateForm>
+
 }
 else
 {
