feat: 支持modbus服务端模拟dtu设备

--- a/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusSlave.razor
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusSlave.razor
@@ -22,6 +22,9 @@
                         <EditorItem @bind-Field=context.ConnectTimeout />
                         <EditorItem @bind-Field=context.Station />
                         <EditorItem @bind-Field=context.CheckClearTime />
+                        <EditorItem @bind-Field=context.DtuId />
+                        <EditorItem @bind-Field=context.HeartbeatHexString />
+                        <EditorItem @bind-Field=context.HeartbeatTime />
                         <EditorItem @bind-Field=context.MulStation />
                         <EditorItem @bind-Field=context.MaxClientCount />
                         <EditorItem @bind-Field=context.IsWriteMemory />
