--- a/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
+++ b/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
@@ -27,7 +27,7 @@
                         <EditorItem @bind-Field=context.CheckClearTime />
                         <EditorItem @bind-Field=context.HeartbeatHexString />
                         <EditorItem @bind-Field=context.CacheTimeout />
-                        <EditorItem @bind-Field=context.EndianType />
+                        <EditorItem @bind-Field=context.DataFormat />
                         <EditorItem @bind-Field=context.SendDelayTime />
                         <EditorItem @bind-Field=context.Timeout />
                         <EditorItem @bind-Field=context.IsStringReverseByteWord />
