--- a/src/adapter/ThingsGateway.Plugin.SiemensS7/Pages/SiemensS7Master.razor
+++ b/src/adapter/ThingsGateway.Plugin.SiemensS7/Pages/SiemensS7Master.razor
@@ -24,7 +24,7 @@
                         <EditorItem @bind-Field=context.Rack />
                         <EditorItem @bind-Field=context.Slot />
                         <EditorItem @bind-Field=context.CacheTimeout />
-                        <EditorItem @bind-Field=context.EndianType />
+                        <EditorItem @bind-Field=context.DataFormat />
                         <EditorItem @bind-Field=context.SendDelayTime />
                         <EditorItem @bind-Field=context.Timeout />
                         <EditorItem @bind-Field=context.IsStringReverseByteWord />
