--- a/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusSlave.razor
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusSlave.razor
@@ -29,7 +29,7 @@
                         <EditorItem @bind-Field=context.MaxClientCount />
                         <EditorItem @bind-Field=context.IsWriteMemory />
                         <EditorItem @bind-Field=context.CacheTimeout />
-                        <EditorItem @bind-Field=context.EndianType />
+                        <EditorItem @bind-Field=context.DataFormat />
                         <EditorItem @bind-Field=context.SendDelayTime />
                         <EditorItem @bind-Field=context.Timeout />
                         <EditorItem @bind-Field=context.IsStringReverseByteWord />
