--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
@@ -75,6 +75,8 @@
                               {
                               await ToastService.Default(); await table.QueryAsync();
                               });
+                              await Change();
+                              await InvokeAsync(StateHasChanged);
                               });} )>
 
                 <BodyTemplate>
