--- a/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
+++ b/src/adapter/ThingsGateway.Plugin.Dlt645/Pages/Dlt645_2007Master.razor
@@ -8,7 +8,7 @@
 
 
 <div style="height:100%; width:100%;">
-    <ChannelDataDebugComponent OnConnectClick="OnConnectClick" OnEditClick="OnEditClick" />
+    <ChannelDataDebugComponent OnConnectClick="OnConnectClick" OnDisConnectClick="OnDisConnectClick" />
 
     @if (_plc != null)
     {
