refactor: 优化debug软件体验

--- a/src/ThingsGateway.Gateway.Razor/DebugPages/ChannelDataDebugComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/DebugPages/ChannelDataDebugComponent.razor
@@ -36,7 +36,8 @@
 
                 </FieldItems>
                 <Buttons>
-                    <Button ButtonType="ButtonType.Submit"  IsAsync class="mx-2" Color=Color.Primary OnClick="ConnectClick">@Localizer["Connect"]</Button>
+                    <Button ButtonType="ButtonType.Submit"  IsAsync class="mx-2" Color=Color.Primary OnClick="ConfimClick">@Localizer["Confim"]</Button>
+                    <Button IsAsync class="mx-2" Color=Color.Primary OnClick="ConnectClick">@Localizer["Connect"]</Button>
                     <Button IsAsync class="mx-2" Color=Color.Warning OnClick="DisconnectClick">@Localizer["Disconnect"]</Button>
                 </Buttons>
             </EditorForm>
